# lt-db-comparator

./: README.md  build.gradle  docker-compose.yml  settings.gradle
.agent/: project-notes.md  rules.md
MetaKafkaCp/: README.md  build.gradle  settings.gradle
MetaKafkaCp/MetaKafkaCpPy/: README.md  pyproject.toml
MetaKafkaCp/MetaKafkaCpPy/config/: application.properties
MetaKafkaCp/MetaKafkaCpPy/metakafkacppy/: __init__.py  cli.py  config_loader.py  replicator.py
MetaKafkaCp/MetaKafkaCpPy/tests/: test_config.py
MetaKafkaCp/config/: application.properties
MetaKafkaCp/src/main/java/com/example/metakafkacp/: AppConfig.java  KafkaCopyApplication.java  KafkaReplicator.java
gradle/wrapper/: gradle-wrapper.properties
lib-example-codex/: README.md  README_LT.md  build.gradle  settings.gradle
src/main/java/com/example/demo/dto/: LoadRequest.java  (+2 more)
src/main/java/com/lt/dbcomparator/: Application.java
src/main/java/org/nimblt/: BatchMessageHandler.java  EqKafkaService.java  Main.java
src/main/java/org/nimblt/config/: KafkaConfig.java
src/main/java/org/nimblt/kafka/: ConsumerWorker.java  MetaConsumer.java  ProducerService.java
src/main/resources/: application.yml  config.json  logback.xml  schema.sql
src/test/java/com/example/demo/: AbstractIntegrationTest.java  CustomerControllerIntegrationTest.java  DataGeneratorIntegrationTest.java  DemoApplicationTests.java
src/test/java/com/lt/dbcomparator/: AbstractIntegrationTest.java  ApplicationTests.java  CustomerControllerIntegrationTest.java  DataGeneratorIntegrationTest.java  KafkaListenerIntegrationTest.java
(+58 files in other folders)
